Update HTML file

--- a/QA-Tool/ACCESS_qa_tool_documents_db.html
+++ b/QA-Tool/ACCESS_qa_tool_documents_db.html
@@ -6,6 +6,7 @@
                 th { cursor: pointer; }
                 table { width: 100%; border-collapse: collapse; }
                 th, td { padding: 10px; border: 1px solid black; text-align: left; }
+                th, td { resize: horizontal; overflow: auto; }  /* To enable resizable columns */
             </style>
             <script>
                 function sortTable(tableId, columnIndex) {
