Update HTML file

--- a/QA-Tool/ACCESS_qa_tool_documents_db.html
+++ b/QA-Tool/ACCESS_qa_tool_documents_db.html
@@ -37,7 +37,7 @@
                 <th onclick="sortTable('sortableTable', 2)">Data Source</th>
                 <th onclick="sortTable('sortableTable', 3)">Description</th>
                 <th onclick="sortTable('sortableTable', 4)">Keywords</th>
-                <th onclick="sortTable('sortableTable', 5)">Source File Embedding Date</th> <!-- Changed as per request -->
+                <th onclick="sortTable('sortableTable', 5)">Source File Embedding Date</th>
             
 </tr></thead><tbody>
 <tr>
