--- a/QA-Tool/ACCESS_qa_tool_documents_db.html
+++ b/QA-Tool/ACCESS_qa_tool_documents_db.html
@@ -6,7 +6,7 @@
                 th { cursor: pointer; }
                 table { width: 100%; border-collapse: collapse; }
                 th, td { padding: 10px; border: 1px solid black; text-align: left; }
-                th, td { resize: horizontal; overflow: auto; }  /* To enable resizable columns */
+                th, td { resize: horizontal; overflow: auto; }
             </style>
             <script>
                 function sortTable(tableId, columnIndex) {
@@ -37,7 +37,7 @@
                 <th onclick="sortTable('sortableTable', 2)">Data Source</th>
                 <th onclick="sortTable('sortableTable', 3)">Description</th>
                 <th onclick="sortTable('sortableTable', 4)">Keywords</th>
-                <th onclick="sortTable('sortableTable', 5)">Source File Embedding Date</th> <!-- Correct field displayed -->
+                <th onclick="sortTable('sortableTable', 5)">Source File Embedding Date</th>  <!-- Correct field displayed -->
             
 </tr></thead><tbody>
 <tr>
